# ansible-macos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  galaxy.yml  pyproject.toml
.github/workflows/: galaxy-cd.yml  galaxy-deploy.yaml  precommit.yaml  preflight.yaml  release.yaml
plugins/modules/: 1password.py  onepasswd.py  plist.py  pmset.py
