[tool.poetry]
name = "ansible-macos"
version = "0.0.0"
description = "Ansible collection for working with macOS."
authors = ["jheddings <jheddings@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "plugins/modules"}]
repository = "https://github.com/jheddings/ansible-macos"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
ruff = "^0.2.2"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "N",   # pep8-naming
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
