[project]
name = "ansible-macos"
version = "0.0.0"
description = "Ansible collection for working with macOS."
authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "MIT"
dependencies = ["ansible>=13.1.0,<14"]

[project.urls]
Repository = "https://github.com/jheddings/ansible-macos"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5",
    "ruff>=0.14.10,<0.15",
]

[tool.hatch.build.targets.sdist]
include = ["plugins/modules"]

[tool.hatch.build.targets.wheel]
include = ["plugins/modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "N",   # pep8-naming
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
